[package]
name = "tdars-toolkit"
version = "0.2.0"
authors = ["Lily Hopkins <lily@hpkns.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["display"] }
dioxus = { version = "=0.7.0-rc.0", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
getset = "0.1.6"
iso_currency = { version = "0.5.3", features = ["with-serde"] }
parking_lot = "0.12.4"
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
rmp-serde = "1.3.0"
rust_xlsxwriter = { version = "0.90.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["desktop"]
bundle = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
